Add other pages

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="container">
-      <h1 class="logo">MarketCalc</h1>
+      <h1 class="logo">QuantifyML</h1>
       <nav>
         <a href="#tools">Tools</a>
         <a href="#about">About</a>
@@ -48,13 +48,14 @@
 
       <div class="tool-grid">
 
-        <div class="tool-card">
+       <div class="tool-card">
           <h4>📈 Price Projection</h4>
           <p>Estimate potential future price ranges using machine learning regression models.</p>
           <a href="calculators/price-projection.html" class="btn-primary">
             Open Calculator
           </a>
         </div>
+
 
 
         <div class="tool-card">
@@ -80,24 +81,32 @@
   </section>
 
   <!-- ABOUT -->
-  <section id="about" class="about">
-    <div class="container">
-      <h3>About This Project</h3>
+  <section id="how-it-works" class="how-it-works">
+    <div class="container-wide">
+      <h3>About</h3>
+
       <p>
-        MarketCalc is a free educational platform providing
-        data-driven trading calculators powered by statistical
-        and machine learning models.
+        Leveraging advanced statistical methods and machine learning models, QuantifyML was designed to give
+        traders, investors, and curious learners a free, intuitive platform to explore market trends, simulate
+        potential outcomes, and make data-driven decisions.
       </p>
+
       <p>
-        Our goal is to help users explore market behavior —
-        not to provide financial advice or guaranteed predictions.
+        QuantifyML offers a range of calculators designed to help users understand and predict market trends,
+        assess risk, and make informed trading decisions. Whether you’re a seasoned trader or just starting out,
+        QuantifyML provides the tools you need to navigate the complex world of stock trading.
+      </p>
+
+      <p>
+        QuantifyML was built by Nolan Moss, a data analytics professional with a Master’s degree in Data Analytics
+        and a thesis focused on machine learning applications for NASDAQ stock forecasting.
       </p>
     </div>
   </section>
 
   <!-- DISCLAIMER -->
-  <section id="disclaimer" class="disclaimer">
-    <div class="container">
+  <section id="how-it-works" class="how-it-works">
+    <div class="container-wide">
       <h3>Disclaimer</h3>
       <p>
         This website is for educational and informational purposes only.
@@ -110,7 +119,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
-      <p>© 2025 MarketCalc — Free Market Analysis Tools</p>
+      <p>© 2025 QuantifyML — Free Market Analysis Tools</p>
     </div>
   </footer>
 
