--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -93,8 +93,15 @@
           <a href="calculators/price-projection.html" class="btn-primary">
             Open Calculator
           </a>
-        </div>
 
+        </div>
+         <div class="tool-card">
+          <h4>📶 Compound Growth</h4>
+          <p>Visualize portfolio growth over time with compound interest and regular contributions.</p>
+          <a href="calculators/compound-growth.html" class="btn-primary">
+            Open Calculator
+          </a>
+        </div>
 
 
         <div class="tool-card">
