--- a/Frontend/Calculators/compound-growth.html
+++ b/Frontend/Calculators/compound-growth.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>QuantifyML | Compound Growth Calculator</title>
 
+  <title>Compound Growth Calculator | QuantifyML</title>
 
+  <!-- Global Styles -->
+  <link rel="stylesheet" href="../styles.css">
 
+  <!--
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,65 +57,77 @@
       border-radius: 10px;
     }
   </style>
+  -->
 </head>
 <body>
 
-<h1>Compound Growth Calculator</h1>
-
-<div class="container">
-
-  <!-- INPUTS -->
-  <div>
-    <label>Years to Invest</label>
-    <input id="years" type="number" value="30">
-
-    <label>Expected Return (%)</label>
-    <input id="rate" type="number" value="7">
-
-    <label>Initial Investment ($)</label>
-    <input id="principal" type="number" value="10000">
-
-    <label>Periodic Contribution ($)</label>
-    <input id="contribution" type="number" value="500">
-
-    <label>Contribution Frequency</label>
-    <select id="frequency">
-      <option value="monthly">Monthly</option>
-      <option value="quarterly">Quarterly</option>
-      <option value="annually">Annually</option>
-    </select>
-
-    <button onclick="calculateGrowth()">Calculate Growth</button>
-
-    <div class="summary">
-      <div>
-        <strong>Final Value</strong>
-        <p id="finalValue">$0</p>
-      </div>
-      <div>
-        <strong>Total Invested</strong>
-        <p id="totalInvested">$0</p>
-      </div>
-      <div>
-        <strong>Total Gain</strong>
-        <p id="totalGain">$0</p>
-      </div>
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="container">
+      <h1 class="logo">QuantifyML</h1>
+      <nav>
+        <a href="../index.html">Home</a>
+        <a href="#calculator">Calculator</a>
+      </nav>
     </div>
-  </div>
+  </header>
 
-  <!-- CHART -->
-  <div>
-    <canvas id="growthChart"></canvas>
-  </div>
 
-  </div>
+  <section id="calculator" class="tools">
+    <div class="container">
+      <h1>Compound Growth Calculator</h1>
+      <!-- INPUTS -->
+      <div>
+        <label>Years to Invest</label>
+        <input id="years" type="number" value="30">
 
-  <!-- Chart.js MUST load first -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <label>Expected Return (%)</label>
+        <input id="rate" type="number" value="7">
 
-  <!-- Your chart logic -->
-  <script src="compound-growth.js"></script>
+        <label>Initial Investment ($)</label>
+        <input id="principal" type="number" value="10000">
 
+        <label>Periodic Contribution ($)</label>
+        <input id="contribution" type="number" value="500">
+
+        <label>Contribution Frequency</label>
+        <select id="frequency">
+          <option value="monthly">Monthly</option>
+          <option value="quarterly">Quarterly</option>
+          <option value="annually">Annually</option>
+        </select>
+
+        <button class="btn-primary" onclick="calculateGrowth()">Calculate Growth</button>
+
+        <div class="summary">
+          <div>
+            <strong>Final Value</strong>
+            <p id="finalValue">$0</p>
+          </div>
+          <div>
+            <strong>Total Invested</strong>
+            <p id="totalInvested">$0</p>
+          </div>
+          <div>
+            <strong>Total Gain</strong>
+            <p id="totalGain">$0</p>
+          </div>
+        </div>
+      </div>
+
+    <!-- CHART -->
+    <div>
+      <canvas id="growthChart"></canvas>
+    </div>
+
+    </div>
+
+    <!-- Chart.js MUST load first -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Your chart logic -->
+    <script src="compound-growth.js"></script>
+  </section>
 
 </body>
 </html>
